# trustifai

./: README.md  config_file.yaml  pyproject.toml  requirements.txt  sample_notebook.ipynb
.github/workflows/: run-tests.yml
benchmarks/FactCHD/: benchmark_report.md  benchmark_results.csv  factchd.ipynb  train.jsonl
benchmarks/amnesty_qa/: amnesty_benchmark.ipynb  benchmark_report.md
examples/: evaluation_script.py  langchain_example.ipynb  llamaindex_example.ipynb
tests/: test_async_pipeline.py  test_infra.py  test_metrics.py  test_trustifai.py  test_visualizer.py
trustifai/: __init__.py  async_pipeline.py  core.py  services.py  structures.py  visualizer.py
trustifai/metrics/: calculators.py  offline_metrics.py  online_metrics.py
