[build-system]
requires = ["setuptools>=61,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustifai"
version = "0.1.10"
dynamic = ["dependencies"]
description = "TrustifAI: A Comprehensive Framework for AI Trustworthiness"
readme = "README.md"
authors = [
    { name = "Aaryan Verma" }
]
requires-python = ">=3.10"
license = { text = "MIT" }

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",]

[project.optional-dependencies]
trace = ["mlflow==3.11.1"]
test = ["pytest==9.0.3", "pytest-asyncio==1.0.0", "langchain-core>=1.3.3", "llama-index==0.14.13"]

[project.urls]
Homepage = "https://github.com/Trustifai/trustifai"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["benchmarks*", "examples*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.ipynb", ".ipynb_checkpoints", "*.json", ".csv", "*.yaml", "*.yml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
